--- a/Front-end/pages/settings.html
+++ b/Front-end/pages/settings.html
@@ -328,7 +328,7 @@
                             <span class="setting-description">Make new posts visible to everyone by default</span>
                           </label>
                         </div>
-                        <div class="form-check form-switch">
+                        <div class="form-check form-switch d-none">
                           <input class="form-check-input" type="checkbox" id="allowSharing" checked>
                           <label class="form-check-label" for="allowSharing">
                             <span class="setting-label">Allow Sharing</span>
@@ -365,7 +365,7 @@
                             <span class="setting-description">When someone comments on your post</span>
                           </label>
                         </div>
-                        <div class="form-check form-switch mb-3">
+                        <div class="form-check form-switch mb-3 d-none">
                           <input class="form-check-input" type="checkbox" id="shares" checked>
                           <label class="form-check-label" for="shares">
                             <span class="setting-label">Shares</span>
