--- a/Front-end/pages/timeline.html
+++ b/Front-end/pages/timeline.html
@@ -627,46 +627,106 @@
 <!--</div>-->
 
 <!-- Share Modal -->
-<div class="modal fade" id="shareModal" tabindex="-1">
+<!--<div class="modal fade" id="shareModal" tabindex="-1">-->
+<!--    <div class="modal-dialog modal-dialog-centered">-->
+<!--        <div class="modal-content">-->
+<!--            <div class="modal-header gradient-bg">-->
+<!--                <h5 class="modal-title text-white">Share Post</h5>-->
+<!--                <button-->
+<!--                        type="button"-->
+<!--                        class="btn-close btn-close-white"-->
+<!--                        data-bs-dismiss="modal"-->
+<!--                ></button>-->
+<!--            </div>-->
+<!--            <div class="modal-body">-->
+<!--                <div class="mb-3">-->
+<!--                    <label class="form-label">Add Message (optional)</label>-->
+<!--                    <textarea class="form-control" rows="3"></textarea>-->
+<!--                </div>-->
+<!--                <div class="mb-3">-->
+<!--                    <label class="form-label">Share To</label>-->
+<!--                    <div class="share-options">-->
+<!--                        <button class="btn btn-share-option active">-->
+<!--                            <i class="bi bi-people"></i> Friends-->
+<!--                        </button>-->
+<!--                        <button class="btn btn-share-option">-->
+<!--                            <i class="bi bi-globe"></i> Public-->
+<!--                        </button>-->
+<!--                        <button class="btn btn-share-option">-->
+<!--                            <i class="bi bi-lock"></i> Only Me-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="modal-footer">-->
+<!--                <button-->
+<!--                        type="button"-->
+<!--                        class="btn btn-secondary"-->
+<!--                        data-bs-dismiss="modal"-->
+<!--                >-->
+<!--                    Cancel-->
+<!--                </button>-->
+<!--                <button type="button" class="btn btn-post">Share Now</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!-- Report Post Modal -->
+<div class="modal fade" id="reportPostModal" tabindex="-1" aria-labelledby="reportPostModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header gradient-bg">
-                <h5 class="modal-title text-white">Share Post</h5>
-                <button
-                        type="button"
-                        class="btn-close btn-close-white"
-                        data-bs-dismiss="modal"
-                ></button>
+                <h5 class="modal-title text-white" id="reportPostModalLabel">Report Post</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="mb-3">
-                    <label class="form-label">Add Message (optional)</label>
-                    <textarea class="form-control" rows="3"></textarea>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Share To</label>
-                    <div class="share-options">
-                        <button class="btn btn-share-option active">
-                            <i class="bi bi-people"></i> Friends
+                <!-- Report Type Selection -->
+                <div class="mb-4">
+                    <label class="form-label">Report Type</label>
+                    <div class="dropdown">
+                        <button class="btn dropdown-btn btn-outline-secondary dropdown-toggle w-100 text-start"
+                                type="button" id="reportTypeDropdown" data-bs-toggle="dropdown">
+                            Select Report Type
                         </button>
-                        <button class="btn btn-share-option">
-                            <i class="bi bi-globe"></i> Public
-                        </button>
-                        <button class="btn btn-share-option">
-                            <i class="bi bi-lock"></i> Only Me
-                        </button>
+                        <ul class="dropdown-menu shadow-sm">
+                            <li><a class="dropdown-item" href="#" data-value="SPAM">Spam</a></li>
+                            <li><a class="dropdown-item" href="#" data-value="HARASSMENT">Harassment</a></li>
+                            <li><a class="dropdown-item" href="#" data-value="INAPPROPRIATE">Inappropriate Content</a></li>
+                            <li><a class="dropdown-item" href="#" data-value="OTHER">Other</a></li>
+                        </ul>
                     </div>
+                    <div class="validation-message" id="typeError"></div>
+                </div>
+
+                <!-- Priority Selection -->
+                <div class="mb-4">
+                    <label class="form-label">Priority</label>
+                    <div class="dropdown">
+                        <button class="btn dropdown-btn btn-outline-secondary dropdown-toggle w-100 text-start"
+                                type="button" id="priorityDropdown" data-bs-toggle="dropdown">
+                            Select Priority
+                        </button>
+                        <ul class="dropdown-menu shadow-sm">
+                            <li><a class="dropdown-item" href="#" data-value="HIGH">High</a></li>
+                            <li><a class="dropdown-item" href="#" data-value="MEDIUM">Medium</a></li>
+                            <li><a class="dropdown-item" href="#" data-value="LOW">Low</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Description -->
+                <div class="mb-3">
+                    <label class="form-label">Description</label>
+                    <textarea class="form-control" id="reportDescription" rows="4"
+                              placeholder="Please provide details about your report..."></textarea>
+                    <div class="validation-message" id="descriptionError"></div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-bs-dismiss="modal"
-                >
-                    Cancel
-                </button>
-                <button type="button" class="btn btn-post">Share Now</button>
+                <button type="button" class="btn rounded-5 btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-post" id="submitReportBtn">Submit Report</button>
             </div>
         </div>
     </div>
