--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -959,5 +959,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../assets/js/profile.js"></script>
+<script src="../assets/js/search.js"></script>
 </body>
 </html>
