--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -31,15 +31,15 @@
                 <a class="navbar-brand" href="/">
                     <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo"/>
                 </a>
-                <div class="search-container">
+                <div class="search-container" style="flex: 1 1 500px; max-width: 600px;">
                     <i class="bi bi-search search-icon"></i>
-                    <input
-                            type="text"
-                            class="form-control search-input"
-                            placeholder="Search"
-                    />
+                    <input type="text"
+                           class="form-control search-input"
+                           placeholder="Search people and posts here..."
+                           id="mainSearchInput"
+                           autocomplete="off">
                 </div>
-                <div class="navbar-nav ms-auto d-flex gap-1 nav-icons">
+                <div class="navbar-nav ms-auto d-flex gap-2 nav-icons">
                     <a
                             class="nav-link"
                             href="timeline.html"
@@ -133,6 +133,28 @@
             </div>
         </nav>
 
+        <!-- Search Overlay -->
+        <div class="search-overlay">
+            <div class="search-header">
+                <div class="container-fluid">
+                    <div class="d-flex align-items-center">
+                        <i class="bi bi-search fs-4 text-muted me-3"></i>
+                        <input type="text"
+                               class="search-input-full"
+                               placeholder="Search people and posts here..."
+                               id="fullSearchInput"
+                               autocomplete="off">
+                        <button class="btn-close-search ms-auto">
+                            <i class="bi bi-x-lg"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="search-results-full container-fluid">
+                <!-- Search results will be dynamically inserted here -->
+            </div>
+        </div>
+
         <!-- Profile Content -->
         <div class="profile-container">
             <!-- Cover Image Section -->
@@ -190,7 +212,7 @@
                                     <h1 id="profileName">Name</h1>
                                     <div class="profile-stats">
                                         <div class="stat-item">
-                                            <span id="postCount" class="stat-number"></span>
+                                            <span id="postCount" class="stat-number">0</span>
                                             <span class="stat-label">Posts</span>
                                         </div>
                                         <div class="stat-item">
