--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -216,11 +216,11 @@
                                             <span class="stat-label">Posts</span>
                                         </div>
                                         <div class="stat-item">
-                                            <span class="stat-number">1.2K</span>
+                                            <span id="followerCount" class="stat-number">0</span>
                                             <span class="stat-label">Followers</span>
                                         </div>
                                         <div class="stat-item">
-                                            <span class="stat-number">890</span>
+                                            <span id="followingCount" class="stat-number">0</span>
                                             <span class="stat-label">Following</span>
                                         </div>
                                     </div>
