--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -470,7 +470,7 @@
                                                 <h5 class="card-title mb-0">Friends</h5>
                                                 <a href="#" class="text-primary">See All</a>
                                             </div>
-                                            <div class="row g-2 friends-grid" id="sidebarFriendsContainer">
+                                            <div class="row g-2 d-grid" id="sidebarFriendsContainer">
                                                 <!-- Dynamic content will be loaded here -->
                                             </div>
                                         </div>
@@ -573,8 +573,9 @@
 
                         <!-- Friends Tab -->
                         <div class="tab-pane fade" id="friends">
-                            <div id="friendsContainer" class="friends-container">
-                                    <!-- Add more friend cards here -->
+                            <div class="friends-container">
+                                <div class="row g-3" id="friendsContainer">
+                                    <!-- Friend cards will be dynamically inserted here -->
                                 </div>
                             </div>
                         </div>
