Profile-view Updated

--- a/Front-end/pages/friends.html
+++ b/Front-end/pages/friends.html
@@ -146,7 +146,7 @@
                         <button class="btn btn-light btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown">
                           Sort by
                         </button>
-                        <ul class="dropdown-menu">
+                        <ul class="sort-dropdown dropdown-menu">
                           <li><a class="dropdown-item" href="#">Name (A-Z)</a></li>
                           <li><a class="dropdown-item" href="#">Name (Z-A)</a></li>
                         </ul>
@@ -219,8 +219,8 @@
                         <button class="btn btn-light btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown">
                           Sort by
                         </button>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Recently Added</a></li>
+                        <ul class="sort-dropdown dropdown-menu">
+<!--                          <li><a class="dropdown-item" href="#">Recently Added</a></li>-->
                           <li><a class="dropdown-item" href="#">Name (A-Z)</a></li>
                           <li><a class="dropdown-item" href="#">Name (Z-A)</a></li>
                         </ul>
@@ -305,7 +305,7 @@
                         <button class="btn btn-light btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown">
                           Sort by
                         </button>
-                        <ul class="dropdown-menu">
+                        <ul class="sort-dropdown dropdown-menu">
                           <li><a class="dropdown-item" href="#">Name (A-Z)</a></li>
                           <li><a class="dropdown-item" href="#">Name (Z-A)</a></li>
                         </ul>
