--- a/Front-end/pages/settings.html
+++ b/Front-end/pages/settings.html
@@ -143,6 +143,11 @@
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="blocked-users-tab" data-bs-toggle="tab" data-bs-target="#blocked-users" type="button" role="tab">
+                      <i class="fa-solid fa-ban me-2"></i>Blocked Users
+                    </button>
+                  </li>
+                  <li class="nav-item" role="presentation">
                     <button class="nav-link" id="security-tab" data-bs-toggle="tab" data-bs-target="#security" type="button" role="tab">
                         <i class="fa-solid fa-lock me-2"></i>Security
                     </button>
@@ -415,6 +420,30 @@
                             <span class="setting-label">Report Alerts</span>
                             <span class="setting-description">Receive updates about new reports</span>
                           </label>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Blocked Users -->
+                  <div class="tab-pane fade" id="blocked-users" role="tabpanel">
+                    <div class="settings-section">
+                      <div class="blocked-users-container">
+                        <div class="blocked-users-header">
+                          <h5 class="section-title">Blocked Users</h5>
+                          <p class="text-muted">Users you've blocked won't be able to:</p>
+                          <ul class="text-muted mb-4">
+                            <li>See your posts or profile</li>
+                            <li>Send you friend requests or messages</li>
+                          </ul>
+                        </div>
+                        <div class="blocked-users-list">
+                          <!-- Blocked users will be dynamically added here -->
+                          <div class="loading-spinner text-center">
+                            <div class="spinner-border text-primary" role="status">
+                              <span class="visually-hidden">Loading...</span>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
