--- a/Front-end/pages/profile-view.html
+++ b/Front-end/pages/profile-view.html
@@ -212,7 +212,7 @@
                     <button class="btn btn-outline-primary btn-lg message-btn">
                       <i class="bi bi-chat-dots"></i> Message
                     </button>
-                    <div class="dropdown">
+                    <div class="dropdown profile-view-dropdown">
                       <button
                         class="btn btn-light btn-lg"
                         data-bs-toggle="dropdown"
