--- a/Front-end/pages/notifications.html
+++ b/Front-end/pages/notifications.html
@@ -21,9 +21,13 @@
         <a class="navbar-brand" href="/">
           <img src="../assets/image/Luma-logo.jpeg" alt="Luma Logo">
         </a>
-        <div class="search-container">
+        <div class="search-container" style="flex: 1 1 500px; max-width: 600px;">
           <i class="bi bi-search search-icon"></i>
-          <input type="text" class="form-control search-input" placeholder="Search notification">
+          <input type="text"
+                 class="form-control search-input"
+                 placeholder="Search people and posts here..."
+                 id="mainSearchInput"
+                 autocomplete="off">
         </div>
         <div class="navbar-nav ms-auto d-flex gap-1 nav-icons">
           <a class="nav-link" href="timeline.html" data-bs-toggle="tooltip" title="Home">
@@ -40,37 +44,59 @@
           </a>
           <a class="nav-link active" href="#" data-bs-toggle="tooltip" title="Notifications">
             <i class="fa-solid fa-bell"></i>
-            <span class="badge rounded-pill bg-danger">0</span>
+            <span class="badge rounded-pill bg-danger" id="notificationBadge">0</span>
           </a>
         </div>
         <div class="navbar-nav nav-icons work-menu">
           <a class="nav-link profile-link" href="#" id="profileDropdown" data-bs-toggle="dropdown" title="Profile">
-            <img src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
+            <img id="navBarProfileImg" src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
             <span id="profile-down-arrow"><i class="fa-solid fa-circle-chevron-down"></i></span>
           </a>
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
             <a href="profile.html">
               <div class="d-flex align-items-center px-3 py-2">
-                <img src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
+                <img id="navProfileImg" src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle me-2" width="40">
                 <div>
-                  <h6 class="mb-0">Dilsara Thiranjaya</h6>
+                  <h6 id="navProfileName" class="mb-0">Name</h6>
                 </div>
               </div>
             </a>
             <hr class="my-1">
-            <a class="dropdown-item" href="admin/dashboard.html">
+            <a class="dropdown-item" href="admin/dashboard.html" id="adminButton">
               <i class="fa-solid fa-user-tie me-2"></i> Administration
             </a>
             <a class="dropdown-item" href="settings.html">
               <i class="bi bi-gear-fill me-2"></i> Settings & Privacy
             </a>
-            <a class="dropdown-item text-danger" href="login.html">
+            <a class="dropdown-item text-danger" href="#"  id="logoutButton">
               <i class="bi bi-box-arrow-right me-2"></i> Logout
             </a>
           </div>
         </div>
       </div>
     </nav>
+
+    <!-- Search Overlay -->
+    <div class="search-overlay">
+      <div class="search-header">
+        <div class="container-fluid">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-search fs-4 text-muted me-3"></i>
+            <input type="text"
+                   class="search-input-full"
+                   placeholder="Search people and posts here..."
+                   id="fullSearchInput"
+                   autocomplete="off">
+            <button class="btn-close-search ms-auto">
+              <i class="bi bi-x-lg"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="search-results-full container-fluid">
+        <!-- Search results will be dynamically inserted here -->
+      </div>
+    </div>
 
     <!-- Notifications Content -->
     <div class="container notifications-container">
@@ -80,14 +106,13 @@
             <div class="card-header bg-transparent">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="mb-0 me-3">Notifications</h5>
-                <button class="btn btn-sm btn-outline-primary" onclick="markAllAsRead()">
+                <button class="btn btn-sm btn-outline-primary" id="markAllAsRead">
                   Mark all as read
                 </button>
               </div>
               <div class="notification-filters mt-3">
                 <button class="btn btn-filter active">All</button>
                 <button class="btn btn-filter">Unread</button>
-                <button class="btn btn-filter">Mentions</button>
               </div>
             </div>
             <div class="card-body p-0">
@@ -110,6 +135,9 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../assets/js/notifications.js"></script>
+<script src="../assets/js/search.js"></script>
 </body>
 </html>
